--- a/pw.config
+++ b/pw.config
@@ -1,5 +1,5 @@
 #Authentification file
-#Mon Dec 28 18:36:41 CET 2020
-ppassword=
-psalt=
-pusername=
+#Tue Jan 05 10:07:43 CET 2021
+ppassword=3WCxv5lHjsYcxnDp36gi0Y/qLZtQKEM9RZ8cF6fH18w\=
+psalt=aJuMqT9bQFtKPbsUn41HKVnl684qAL
+pusername=Testbenutzer
